--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       </div>
     </section>
           
-    <section class="skills py-5" id="skills">
+    <section class="skills py-5 d-none d-md-block" id="skills">
       <div class="container d-flex justify-content-center">
         <div class="card-skills text-center position-relative">
           <h1 class="mb-5 section-title">Skills</h1>
@@ -259,6 +259,48 @@
         </div>
       </div>
     </section>
+
+    <section class="skills py-5 d-block d-md-none" id="skills">
+      <div class="container d-flex justify-content-center">
+        <div class="card-skills position-relative">
+          <h1 class="mb-5 section-title text-center">Skills</h1>
+
+          <div class="row g-4 justify-content-center skill-icons">
+            <div class="col-4">
+              <i class="devicon-html5-plain" title="HTML5"></i>
+            </div>
+            <div class="col-4">
+              <i class="devicon-css3-plain" title="CSS3"></i>
+            </div>
+            <div class="col-4">
+              <i class="devicon-javascript-plain" title="JavaScript"></i>
+            </div>
+            <div class="col-4">
+              <i class="devicon-angularjs-plain" title="Angular"></i>
+            </div>
+            <div class="col-4">
+              <i class="devicon-bootstrap-plain" title="Bootstrap"></i>
+            </div>
+            <div class="col-4">
+              <i class="devicon-github-plain" title="GitHub"></i>
+            </div>
+            <div class="col-4">
+              <i class="devicon-photoshop-plain" title="Photoshop"></i>
+            </div>
+            <div class="col-4">
+              <i class="devicon-figma-plain" title="Figma"></i>
+            </div>
+            <div class="col-4">
+              <i class="devicon-mysql-plain" title="MySQL"></i>
+            </div>
+            <div class="col-4">
+              <i class="devicon-python-plain" title="Python"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
     <section class="curriculo py-5" id="curriculo">
       <div class="container d-flex justify-content-center">
