--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <li class="nav-item"><a class="nav-link active" href="#inicio">Início</a></li>
         <li class="nav-item"><a class="nav-link" href="#sobremim">Sobre mim</a></li>
         <li class="nav-item"><a class="nav-link" href="#projetos">Projetos</a></li>
-        <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+        <li class="nav-item"><a class="nav-link" href="#skills1">Skills</a></li>
         <li class="nav-item"><a class="nav-link" href="#curriculo">Currículo</a></li>
         <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
       </ul>
@@ -260,7 +260,7 @@
       </div>
     </section>
 
-    <section class="skills py-5 d-block d-md-none" id="skills">
+    <section class="skills py-5 d-block d-md-none" id="skills1">
       <div class="container d-flex justify-content-center">
         <div class="card-skills position-relative">
           <h1 class="mb-5 section-title text-center">Skills</h1>
@@ -419,3 +419,4 @@
 
 </body>
 </html>
+
