--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           </div>
 
           <div class="mt-4 text-center">
-            <a href="curriculo.pdf" download class="btn-download">Baixar Currículo</a>
+            <a href="./arq/Currículo.pdf" download class="btn-download">Baixar Currículo</a>
           </div>
 
         </div>
