--- a/index.html
+++ b/index.html
@@ -521,7 +521,9 @@
               desenvolvimento, foram explorados fundamentos de design visual,
               semântica HTML e estruturação de páginas web.
             </p>
-            
+            <p>
+              TECNOLIGIAS UTILIZADAS: HTML5 E CSS3
+            </p>
           </div>
         </div>
       </div>
@@ -542,6 +544,7 @@
               aplicar conceitos de design responsivo e organização visual,
               resultando em uma interface adaptável a diferentes dispositivos.
             </p>
+            <p>TECNOLOGIAS UTILIZADAS: HTML5, CSS3 e Materialize</p>
           </div>
         </div>
       </div>
@@ -564,6 +567,7 @@
               Storage para armazenar os dados e aplica conceitos de programação
               orientada a objetos.
             </p>
+            <p>TECNOLOGIAS UTILIZADAS: HTML5, CSS3 e JavaScript</p>
           </div>
         </div>
       </div>
@@ -588,6 +592,7 @@
               atualização, exclusão e consultas, permitindo organizar e
               consultar informações de forma estruturada e eficiente.
             </p>
+            <p>TECNOLOGIAS UTILIZADAS: MySQL e Workbench</p>
           </div>
         </div>
       </div>
@@ -612,6 +617,7 @@
               interface intuitiva e responsiva, unindo organização financeira e
               experiência do usuário.
             </p>
+            <p>TECNOLOGIAS UTILIZADAS: IONIC Framework e Android Studio</p>
           </div>
         </div>
       </div>
@@ -635,6 +641,7 @@
               integrando conceitos de programação orientada a objetos e
               manipulação de dados em tabela.
             </p>
+            <p>TECNOLGIAS UTILIZADAS: JavaScript e Apache NetBeans</p>
           </div>
         </div>
       </div>
