--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="d-flex align-items-center">
           <ul class="navbar-nav d-flex flex-row gap-3 align-items-center">
             <li class="nav-item">
-              <a class="nav-link" href="#inicio">Início</a>
+              <a class="nav-link" href="#inicio-desktop">Início</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#sobremim">Sobre mim</a>
@@ -73,7 +73,6 @@
       </div>
     </nav>
 
-    <!-- NAVBAR MOBILE -->
     <nav class="navbar navbar-dark navbar-custom shadow-sm px-4 d-lg-none bold">
       <div class="container-fluid justify-content-between">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#menuLateral" aria-controls="menuLateral">
@@ -114,7 +113,7 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="#inicio">Início</a>
+            <a class="nav-link active" href="#inicio-mobile">Início</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#sobremim">Sobre mim</a>
@@ -139,15 +138,15 @@
       <section class="inicio-desktop d-none d-md-flex align-items-center" id="inicio-desktop">
         <div class="container h-100">
           <div class="row align-items-center h-100">
-            <div class="col-md-6 text-start">
-              <h1 class="Orbitron">Oi, eu sou o Luan</h1>
+            <div class="col-md-6 text-start ">
+              <h1 class="Orbitron">Oi, eu sou o Luan!</h1>
               <h1 id="typed-text-desktop"></h1>
-              <a href="./curriculo.pdf" download class="btn-download1 mt-4 px-4 py-2">
+              <a href="./arq/Currículo.pdf" download class="btn-download1 mt-4 px-4 py-2">
                 <i class="bi bi-download me-2"></i>Baixar Currículo
               </a>
             </div>
             <div class="col-md-6 d-flex justify-content-end">
-              <img src="./img/pixel.png" alt="Luan Henrique" class="img-fluid rounded-circle foto-inicio w-100 w-md-75 w-lg-50">
+              <img src="./img/pixel.png" alt="Luan Henrique" class="img-fluid rounded-circle foto-inicio-desktop w-100 w-md-75 w-lg-50">
             </div>
           </div>
         </div>
