--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
               semântica HTML e estruturação de páginas web.
             </p>
             <p>
-              TECNOLIGIAS UTILIZADAS: HTML5 E CSS3
+              TECNOLOGIAS UTILIZADAS: HTML5 E CSS3
             </p>
           </div>
         </div>
@@ -640,7 +640,7 @@
               integrando conceitos de programação orientada a objetos e
               manipulação de dados em tabela.
             </p>
-            <p>TECNOLGIAS UTILIZADAS: JavaScript e Apache NetBeans</p>
+            <p>TECNOLOGIAS UTILIZADAS: JavaScript e Apache NetBeans</p>
           </div>
         </div>
       </div>
@@ -677,4 +677,5 @@
       });
     </script>
   </body>
+
 </html>
