--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             </div>
 
             <div class="row align-items-start">
-              <div class="col-md-6 text-md-end text-center mb-3 mb-md-0">
+              <div class="col-md-6 text-md-end text-center mt-4 mt-md-5">
                 <h3 class="fonte-pixel">Contatos da Fatec-Lins</h3>
                 <p><strong>FATEC Lins</strong></p>
                 <p>
@@ -488,9 +488,8 @@
                   <a href="https://www.fateclins.edu.br" target="_blank">www.fateclins.edu.br</a>
                 </p>
               </div>
-              <div
-                class="col-md-6 d-flex justify-content-center justify-content-md-start">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3707.1132480308784!2d-49.75280042396741!3d-21.69832629580409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94be15ecb135a5dd%3A0x66b807178c781125!2sFATEC%20Lins!5e0!3m2!1spt-BR!2sbr!4v1760562218890!5m2!1spt-BR!2sbr" width="100%" height="250" style="border: 0; max-width: 400px" allowfullscreen="" loading="lazy">
+              <div class="col-md-6 d-flex justify-content-center justify-content-md-start mt-4 mt-md-5">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3707.1132480308784!2d-49.75280042396741!3d-21.69832629580409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94be15ecb135a5dd%3A0x66b807178c781125!2sFATEC%20Lins!5e0!3m2!1spt-BR!2sbr!4v1760562218890!5m2!1spt-BR!2sbr" width="100%" height="250" style="border: 0; max-width: 400px; border-radius: 5px;" allowfullscreen="" loading="lazy">
                 </iframe>
               </div>
             </div>
@@ -677,5 +676,4 @@
       });
     </script>
   </body>
-
 </html>
